# socket-tool

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
socket/include/: error.h  pub.h  rcvdata_structure.h  socket_cli.h  socket_interface.h  types.h
socket/src/: rcvdata_structure.c  scocket_cli_tcp.c  socket_cli_udp.c  socket_core.c  socket_core_tcp.c  socket_core_tcp_client.c  socket_core_tcp_server.c  socket_core_udp.c  socket_core_udp_client.c  socket_core_udp_server.c  socket_interface.c  sockt_cli.c
tool/: scocket_cli_tcp.c  socket_cli.h  socket_cli_udp.c  socket_tool.c  socket_tool.h  sockt_cli.c  sockt_cli_tcp.c  sockt_cli_tcp_server.c
